# state

./: .bazeliskrc  .bazelrc  .gitignore  BUILD  BUILD.bazel  Cargo.toml  Makefile  README.org  WORKSPACE  WORKSPACE.bazel  default-grafana-agent-config.yaml  local.yaml
config/: BUILD.bazel
config/applications/demo-service/base/: application.yaml  deployment.yaml  kustomization.yaml  service.yaml
config/applications/echo-service/base/: application.yaml  config-map.yaml  deployment.yaml  kustomization.yaml  service.yaml
config/applications/platform/crossplane/: README.org
config/clusters/cust-xxx-loc-xxxxx-argo/layer1/: kustomization.yaml
config/clusters/cust-xxx-loc-xxxxx-argo/layer2/: applications.yaml
config/clusters/cust-xxx-loc-xxxxx-argo/wave2/: wave.yaml
config/clusters/cust-xxx-loc-xxxxx-kapp/layer1/: kustomization.yaml
config/clusters/cust-xxx-loc-xxxxx-kapp/layer2/: kustomization.yaml
config/clusters/cust-xxx-loc-xxxxx-kapp/layer3/: kustomization.yaml
config/clusters/cust-xxx-loc-xxxxx-kapp/wave3/: kustomization.yaml  wave.yaml
config/clusters/development-ap-southeast-2/: kustomization.yaml
config/clusters/init/: kustomization.yaml
config/clusters/init/wave1/: kustomization.yaml  wave.yaml
config/clusters/init/wave2/: kustomization.yaml
config/clusters/init/wave3/: kustomization.yaml  vpc.yaml  wave.yaml
config/clusters/local-example/: kustomization.yaml
config/clusters/local-with-argocd/: applications.yaml
config/clusters/local-without-argocd/: kustomization.yaml
config/clusters/mgmt-org-loc-xxxxx-yang/: kustomization.yaml
config/clusters/production-ap-southeast-2/: kustomization.yaml
config/clusters/staging-ap-southeast-2/: kustomization.yaml
config/clusters/work-dev-aws-apse2-yoga/: kustomization.yaml
config/components/common-labels/: kustomization.yaml
config/platform/crossplane-base/: README.org
config/platform/crossplane-base/base/: crossplane.gen.yaml
config/platform/crossplane-packages/: managed-resources.yaml
config/platform/crossplane-packages/simple-vpc/: definition.yaml  simple-vpc-1bb4536567f7.xpkg
config/platform/crossplane-provider-config/base/: aws-provider-config.yaml  kustomization.yaml
config/platform/crossplane-providers/base/: aws-provider.yaml  kustomization.yaml
config/platform/crossplane/base/: kustomization.yaml
config/platform/istio-base/base/: control-plane.yaml  kustomization.yaml  prometheus.yaml
config/platform/istio-ingress/base/: authorization.yaml  external-gateway.yaml  ingress-gateways.yaml  internal-gateway.yaml  kustomization.yaml
config/platform/istio-operator/base/: istio-operator.gen.yaml
config/services/goodbye/base/: kustomization.yaml  service.yaml
config/services/hello/base/: authorization.yaml  deployment.yaml  kustomization.yaml  service.yaml
config/services/httpbin/base/: authorization.yaml  deployment.yaml  kustomization.yaml  service.yaml
kube/: BUILD.bazel
kube/clusters/cust-xxx-loc-xxxxx-argo/wave2/: applications.yaml  wave.yaml
kube/clusters/cust-xxx-loc-xxxxx-kapp/wave1/: kustomization.yaml  wave.yaml
kube/clusters/cust-xxx-loc-xxxxx-kapp/wave2/: kustomization.yaml  wave.yaml
kube/clusters/cust-xxx-loc-xxxxx-kapp/wave3/: kustomization.yaml  wave.yaml
kube/clusters/init/wave1/: wave.yaml
kube/clusters/init/wave2/: wave.yaml
kube/clusters/init/wave3/: wave.yaml
kube/clusters/work-prd-aws-apse2-muse/: kustomization.yaml
kube/components/common-labels/: kustomization.yaml
kube/platform/backstage/: README.org
kube/platform/backstage/base/: backstage.yaml  kustomization.yaml  postgresql.yaml
kube/platform/crossplane-base/base/: crossplane.gen.yaml
kube/platform/crossplane-packages/: root-vpc.yaml
kube/platform/crossplane-packages/simple-vpc/: composition.yaml  crossplane.yaml  definition.yaml
kube/platform/crossplane-provider-config/base/: aws-provider-config.yaml  kustomization.yaml
kube/platform/grafana-stack/: README.org
kube/platform/grafana-stack-crds/base/: grafana-agent-operator-crds.gen.yaml  grafana-agent-operator.gen.yaml  kube-prometheus-crds.gen.yaml  kustomization.yaml  m3db-operator.gen.yaml
kube/platform/grafana-stack/base/: default-grafana-agent.yaml  default-logs-instance.yaml  default-metrics-instance.yaml  default-pod-logs.yaml  grafana-agent-monitoring.yaml  grafana-agent-operator.gen.yaml  grafana-agent.yaml  istio-grafana-agent.yaml  istio-metrics-instance.yaml  istio-pod-monitor.yaml  istio-prometheus-rule.yaml  istio-service-monitor.yaml  kube-prometheus.gen.yaml  kubelet-service-monitor.yaml  kustomization.yaml  loki.gen.yaml  metrics-instance.yaml  namespace.yaml  tempo.gen.yaml  test-service-monitor.yaml  tracing-grafana-agent.yaml  virtual-services.yaml
kube/platform/istio-base/base/: control-plane.yaml  kustomization.yaml
kube/platform/istio-ingress/base/: authentication.yaml  authorization.yaml  external-gateway.yaml  ingress-gateways.yaml  internal-gateway.yaml  kustomization.yaml  office-gateway.yaml
kube/platform/istio-operator/base/: istio-operator.gen.yaml
kube/platform/kube-prometheus/base/: kube-prometheus.gen.yaml  kustomization.yaml  namespace.yaml  virtual-services.yaml
kube/platform/loki/base/: kustomization.yaml  loki.gen.yaml
kube/platform/metrics-server/base/: metrics-server.yaml
kube/platform/monitoring/: README.org
kube/platform/monitoring-base/base/: grafana-agent-operator.gen.yaml  kustomization.yaml  m3db-operator.gen.yaml
kube/platform/monitoring/base/: default-grafana-agent.yaml  default-logs-instance.yaml  default-metrics-instance.yaml  default-pod-logs.yaml  grafana-agent-monitoring.yaml  istio-grafana-agent.yaml  istio-metrics-instance.yaml  istio-pod-monitor.yaml  istio-prometheus-rule.yaml  (+6 more)
src/: BUILD.bazel
src/app/goodbye/: BUILD.bazel  Cargo.toml
src/app/hello/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go
src/app/httpbin/: BUILD.bazel
src/go/: BUILD.bazel  go.mod  go.sum
src/lib/farewell/: BUILD.bazel
src/rust/: BUILD.bazel  Cargo.toml
src/services/goodbye/: BUILD.bazel  Cargo.toml
src/services/hello/: BUILD.bazel  go.mod
(+125 files in other folders)
