workspace(name = "state")

load(
    "//bazel:deps.bzl",
    "state_base_dependencies",
    "state_binary_dependencies",
    "state_container_dependencies",
    "state_go_dependencies",
    "state_manifest_dependencies",
    "state_python_dependencies",
    "state_rust_dependencies",
)

state_base_dependencies()

state_binary_dependencies()

state_manifest_dependencies()

state_python_dependencies()

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python3_10_6",
    python_version = "3.10.6",
)

state_go_dependencies()

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

go_rules_dependencies()

go_register_toolchains(version = "1.19.3")

load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")

# The following Gazelle annotation is required since we pull in bazel_gazelle
# via a macro rather than directly within this file.
# gazelle:repo bazel_gazelle
gazelle_dependencies(
    # By default, Gazelle only looks for WORKSPACE.
    # See https://github.com/bazelbuild/bazel-gazelle/issues/678.
    go_repository_default_config = "@//:WORKSPACE.bazel",
)

load("//bazel:go_lib_deps.bzl", "state_go_lib_dependencies")

# gazelle:repository_macro bazel/go_lib_deps.bzl%state_go_lib_dependencies
state_go_lib_dependencies()

state_rust_dependencies()

load("@rules_rust//rust:repositories.bzl", "rules_rust_dependencies", "rust_register_toolchains")

rules_rust_dependencies()

rust_register_toolchains(
    edition = "2021",
    version = "1.65.0",
)

# Use the following for the nightly toolchain:
# rust_register_toolchains(version = "nightly", iso_date = "2022-12-04", edition="2021")

load("@rules_rust//crate_universe:repositories.bzl", "crate_universe_dependencies")

crate_universe_dependencies()

load("//bazel:rust_lib_deps.bzl", "state_rust_lib_dependencies")

state_rust_lib_dependencies()

load("@crate_index//:defs.bzl", "crate_repositories")

crate_repositories()

state_container_dependencies()

load("@io_bazel_rules_docker//repositories:repositories.bzl", container_repositories = "repositories")

container_repositories()

load("@io_bazel_rules_docker//repositories:deps.bzl", container_deps = "deps")

container_deps()

# The following macro invocation is only required if go_image is used as the invocation below
# will declare the standard Go base image dependencies. If we use container_image (better practice?)
# to fully define our own base images then the following can be omitted.
load("@io_bazel_rules_docker//go:image.bzl", go_image_repositories = "repositories")

go_image_repositories()

load("//bazel:container_deps.bzl", "state_base_container_dependencies")

state_base_container_dependencies()
