load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

container_image(
    name = "httpbin_image",
    base = "@httpbin_linux_amd64//image",
    cmd = [
        "gunicorn",
        "-b",
        "0.0.0.0:80",
        "httpbin:app",
        "-k",
        "gevent",
    ],
)

container_push(
    name = "push_local_httpbin_image",
    format = "Docker",
    image = ":httpbin_image",
    registry = "localhost:5555",
    repository = "httpbin",
    tag = "1.0.0",
)
