load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

# gazelle:prefix github.com/00rg/org/src/go/cmd/hello

gazelle(
    name = "gazelle_generate_targets",
)

go_library(
    name = "hello_lib",
    srcs = ["main.go"],
    importpath = "github.com/00rg/org/src/go/cmd/hello",
    visibility = ["//visibility:private"],
    deps = [
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:otelhttp",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.12.0:v1_12_0",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:otlptrace",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp//:otlptracehttp",
        "@io_opentelemetry_go_otel_exporters_stdout_stdouttrace//:stdouttrace",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)

go_binary(
    name = "hello",
    embed = [":hello_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "hello_test",
    srcs = ["main_test.go"],
    embed = [":hello_lib"],
    deps = ["@com_github_google_go_cmp//cmp"],
)

# Below won't use the alpine_linux_amd64 base container defined in container_deps.bzl.
# Instead, it'll use the standard (distroless I think?) language-specific base image.

go_image(
    name = "hello_image",
    embed = [":hello_lib"],

    # Note that if GOOS and GOARCH aren't hardcoded below the --platforms argument must
    # be specified when building the image that is pushed to the registry. E.g.:
    # bazel run //src/app/hello:push_local_hello_image --platforms=@io_bazel_rules_go//go/toolchain:linux_amd64
    goarch = "amd64",
    goos = "linux",
)

container_push(
    name = "push_local_image",
    format = "Docker",
    image = ":hello_image",
    registry = "localhost:5555",
    repository = "hello",
    tag = "0.0.1",
    visibility = ["//visibility:public"],
)
