load("@crate_index//:defs.bzl", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "farewell",
    srcs = ["src/lib.rs"],
    deps = all_crate_deps(),
)

rust_test(
    name = "farewell_test",
    crate = ":farewell",
)
