load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crate_index//:defs.bzl", "all_crate_deps")
load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

rust_binary(
    name = "goodbye",
    srcs = ["src/main.rs"],
    deps = [
        "//src/rust/crates/farewell",
    ] + all_crate_deps(),
)

rust_image(
    name = "goodbye_image",
    srcs = ["src/main.rs"],
    deps = [
        "//src/rust/crates/farewell",
    ] + all_crate_deps(),
)

container_push(
    name = "push_local_goodbye_image",
    format = "Docker",
    image = ":goodbye_image",
    registry = "localhost:5555",
    repository = "goodbye",
    tag = "0.0.1",
)
